<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/imgIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <!--  <com.mikhaellopez.circularimageview.CircularImageView -->
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:id="@+id/userInfo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_text"
                android:textColor="#0066CC"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUserName"
                android:text="@string/location_info_text"
                android:textColor="#0066CC" />

            <TextView
                android:id="@+id/tvCreatedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/iconmonstr_time_3_icon_24"
                android:drawablePadding="5dp"
                android:text="@string/creation_time_text"
                android:textColor="#888888"
                android:textSize="10sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgIntro"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/panelLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imgPhoto"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLikesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/iconmonstr_favorite_4_icon_24"
            android:drawablePadding="5dp"
            android:text="@string/counts_text"
            android:textColor="#0066CC"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/likes_text"
            android:textColor="#0066CC"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/panelLikes"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/caption_default_text" />

    <LinearLayout
        android:id="@+id/llCommentsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvCaption"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvCommentsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/counts_text"
            android:textColor="#0066CC"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/comments_text"
            android:textColor="#0066CC"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvComment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llCommentsCount"
        android:layout_marginLeft="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/comment_default_text" />

    <TextView
        android:id="@+id/tvComment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvComment1"
        android:layout_marginLeft="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/comment_default_text" />

</RelativeLayout>